syntax = "proto3";

import "google/protobuf/wrappers.proto";

option csharp_namespace = "Products.Application.Grpc.Proto";

service ProductGrpcService {
    rpc GetProducts(ProductIds) returns (ProductListResponse);
}

message ProductIds {
    repeated string id = 1;
}

message ProductListResponse {
    repeated ProductItemResponse products = 1;
}

message ProductItemResponse {
    string id = 1;
    string code = 2;
    string name = 3;
    google.protobuf.StringValue description = 4;
    bool is_obsolete = 5;
    ProductUnitResponse buy_unit = 6;
    ProductUnitResponse sell_unit = 7;
    ProductTypeResponse product_type = 8;
    ProductGroupResponse product_group = 9;
    repeated ProductImageReponse images = 10;
    NullableDecimalValue buy_price = 11;
    DecimalValue sell_price = 12;
    google.protobuf.StringValue colors = 13;
}

message ProductUnitResponse {
    google.protobuf.StringValue id = 1;
    google.protobuf.StringValue name = 2;
}

message ProductTypeResponse {
    string id = 1;
    string name = 2;
}

message ProductGroupResponse {
    string id = 1;
    string name = 2;
}

message ProductImageReponse {
    string id = 1;
    string url = 2;
}

message DecimalValue {
    int64 units = 1;
    sfixed32 nanos = 2;
}

message NullableDecimalValue {
    google.protobuf.Int64Value units = 1;
    google.protobuf.Int32Value nanos = 2;
}