syntax = "proto3";

import "google/protobuf/wrappers.proto";

option csharp_namespace = "Shopping.Application.Grpc.Proto";

service ShoppingGrpcService {
    rpc GetProducts (ProductFilterSorting) returns (ProductListResponse);
}

message ProductFilterSorting {
    NullableStringValue product_group_id = 1;
    NullableDecimalValue min_price = 2;
    NullableDecimalValue max_price = 3;
    google.protobuf.DoubleValue rating = 4;
    bool is_descending = 5;
    google.protobuf.Int32Value order_by = 6;
    int32 page_index = 7;
    int32 page_size = 8;
    NullableStringValue search = 9;

}

/*
    
*/

enum OrderBy {
    ORDER_BY_NAME = 0;
    ORDER_BY_PRICE = 1;
    ORDER_BY_RATING = 2;
}


//response

message ProductListResponse {
    repeated ProductItemResponse products = 1;
}

message ProductItemResponse {
    string id = 1;
    double rating = 2;
    string name = 3;
    DecimalValue origin_price = 4;
    DecimalValue discount_price = 5;
    double number_of_rating = 6;
    double number_of_order = 7;
}

//type valuable

message DecimalValue {
    int64 units = 1;
    sfixed32 nanos = 2;
}

message NullableDecimalValue {
    google.protobuf.Int64Value units = 1;
    google.protobuf.Int32Value nanos = 2;
}

message NullableStringValue {
    google.protobuf.StringValue strings = 1;
}